# django_civicrm_paypal_hook

./: pyproject.toml  readme.md
main/: .env.template  urls.py  views.py  wsgi.py
main/settings/: defaults.py  main.py  mods.py  paypal.py
